feat: refactor and update all documentation